# kubeauth

./: .gitignore  Cargo.toml  README.md  Rocket.toml  docker.sh  pushTag.sh  users.json
.github/workflows/: docker-publish.yml  rust.yml
cert/: cert.sh
contrib/: Dockerfile  argon_hash.sh  gen_cert.sh  kubeauth-deployment.yaml  kubeauth.service  kubeauth_json.service
contrib/glauth/: README.md  glauth.service  sample.cfg  start.sh
json_templates/: example-request.json  example_response.json  request.sh
src/: main.rs  token_review.rs
src/authenticators/: README_json.md  README_ldap.md  authenticator.rs  json.rs  ldap.rs  mod.rs
