[package]
name = "kubeauth"
version = "0.1.4"
edition = "2021"
authors = ["Mia Metzler <mia@metzler.systems>"]
license = "GPL-3.0-only"
description = "A kubernetes authentication service written in rust"
readme = "README.md"
homepage = "https://github.com/miathedev/kubeauth"
repository = "https://github.com/miathedev/kubeauth"
keywords = ["cli", "kubernetes", "authentication", "auth", "kubeauth"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#Env variables
[env]
USERS_FILE_PATH = "users.json"

[features]
default = ["json_auth"]
json_auth = []

[dependencies]
argon2 = "0.5.0"
cmdparser = "0.2.0"
ldap3 = { version = "0.9.0", features = ["tls"] , default-features = false }
# rocket
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
rocket_cors = "0.5.2"
# serde
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"

[global.tls]
certs = "cert/kubeauth.crt"
key = "cert/kubeauth.csr"
